samples/_failures_safe/1761251524_c6d86b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4f3497fe.c: In function ‘main’:
./samples/SAFE/__tmp_4f3497fe.c:141:12: error: missing terminating " character
  141 |     printf("Enter log
      |            ^~~~~~~~~~
./samples/SAFE/__tmp_4f3497fe.c:141:5: error: expected expression at end of input
  141 |     printf("Enter log
      |     ^~~~~~
./samples/SAFE/__tmp_4f3497fe.c:141:5: error: expected declaration or statement at end of input
